added md5 encryption, added links to the /main route

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="container">
       <div id="header">
-        <h1>RIDE <span>SHARE</span></h1>
+        <a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
       </div>
       <div id='cover'>
         <h2>Make your commute <span>fun</span> and <span>easy</span>.</h2>
