--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -22,7 +22,7 @@
 	<body>
 		<div class="container">
 			<div id="header">
-		    	<h1>RIDE <span>SHARE</span></h1>
+		    	<a href="/main"><h1>RIDE <span>SHARE</span></h1></a>
 		    	<button id="logout">Log Out</button>
 		  	</div>
 		  	<div id="search">
