--- a/app/views/offerRide.html
+++ b/app/views/offerRide.html
@@ -27,7 +27,7 @@
 	<body>
 	<div id="container">
 		<div id="header">
-		    <h1>RIDE <span>SHARE</span></h1>
+		    <a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
 		    <button id="logout">Log Out</button>
 		</div>
 		<div id="offerInfo">
