--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="container">
 		<div id="header">
-		    <h1>RIDE <span>SHARE</span></h1>
+		    <a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
 		    <a href="/"><button id="logout">Back</button></a>
 		</div>
 		<div id="registration">
