fixed buttons on profile

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -29,10 +29,10 @@
 					</form>
 				</div>
 				<div>
-					<a href='/offer'><button id="offerRide">Offer a Ride</button></a>
+					<a href='/offer'><h3>Offer a Ride</h3></a>
 				</div>
 				<div>
-					<a href='/need'><button id="needRide">Need a Ride</button></a>	
+					<a href='/need'><h3>Need a Ride</h3></a>
 				</div>
 				<div id="rideRequest">
 					<h3 id="activeRequest">Active Ride Requests:</h3>
