--- a/app/views/offerRide.html
+++ b/app/views/offerRide.html
@@ -34,8 +34,8 @@
 			<h2 id="postRide">Post a Ride Offer</h2>
 			<div id="tripInfo">
 				<form id="locations" action="/postoffer" method="Post">
-					<input name='origin' class="route" id="searchTextField" type="text" placeholder="Where From?"><br><br>
-					<input name='destination' class="route" id="searchTextField" type="text" placeholder="Where To?">
+					<input name='origin' id="searchTextField" type="text" placeholder="Where From?"><br><br>
+					<input name='destination' id="searchTextField" type="text" placeholder="Where To?">
 				
 				<p class="depart"> Depart</p>
 					<p class="datepicker"><input name='date' type="text" id="datepicker" placeholder="Date"></p>
