--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -7,6 +7,45 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+		<script type="text/javascript">Stripe.setPublishableKey('pk_test_NkiRI9kNgE7QgzrhtEugK6e9');</script>
+		<script>
+		$(function() {
+  		var $form = $('#newUser');
+  		$form.submit(function(event) {
+    // Disable the submit button to prevent repeated clicks:
+    	$form.find('#submitInfo').prop('disabled', true);
+
+    // Request a token from Stripe:
+    	Stripe.card.createToken($form, stripeResponseHandler);
+
+    // Prevent the form from being submitted:
+    	return false;
+  		});
+		});
+		function stripeResponseHandler(status, response) {
+  // Grab the form:
+  var $form = $('#newUser');
+
+  if (response.error) { // Problem!
+
+    // Show the errors on the form:
+    $form.find('ul').append('<li>'+ response.error.message + '</li>');
+    $form.find('#submitInfo').prop('disabled', false); // Re-enable submission
+
+  } else { // Token was created!
+
+    // Get the token ID:
+    var token = response.id;
+
+    // Insert the token ID into the form so it gets submitted to the server:
+    $form.append($('<input type="hidden" name="stripeToken">').val(token));
+
+    // Submit the form:
+    $form.get(0).submit();
+  }
+};
+	</script>
 	</head>
 	<body>
 		<div id="container">
@@ -25,8 +64,33 @@
 				<input name='username' class="text_input" id="user" type="text" placeholder="Username">
 				<input name='password' class="text_input" id="pass" type="password" placeholder="Password" >
 				<input name='confirmPassword' class="text_input" id="pass" type="password" placeholder="Confirm Password">
+					<p id="ccInfo">Credit Card Information</p>
+
+  				<div class="form-row">
+    				<label>
+      				<span>Card Number</span>
+      				<input type="text" size="20" data-stripe="number">
+    				</label>
+  				</div>
+
+  				<div class="form-row">
+    				<label>
+      				<span>Expiration (MM/YY)</span>
+      				<input type="text" size="2" data-stripe="exp_month">
+    				</label>
+    				<span> / </span>
+    				<input type="text" size="2" data-stripe="exp_year">
+  				</div>
+
+  				<div class="form-row">
+    				<label>
+      				<span>CVC</span>
+      				<input type="text" size="4" data-stripe="cvc">
+    				</label>
+  				</div>
 				<button id="submitInfo" type="submit" value="Submit"/>Register</button>
 			</form>
+			<ul>
 			{% with messages = get_flashed_messages() %}
   				{% if messages %}
     				{% for message in messages %}
@@ -34,6 +98,7 @@
     				{% endfor %}
   				{% endif %}
 			{% endwith %}
+			</ul>
 		</div>
 	</body>
 </html>
