--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Welcome to Ride Share</title>
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-    <script type="text/javascript">
-    </script>
+    <link rel="stylesheet" type="text/css" href="static/css/frontPage.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   </head>
   <body>
     <div id="container">
