fixed buttons on profile page. again.

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container">
 			<div id="header">
-        		<h1>RIDE <span>SHARE</span></h1>
+        		<a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
         		<a href='/logout'><button id="logout">Log Out</button></a>
       		</div>
       		<div id="page">
@@ -28,11 +28,8 @@
 						<input type='submit' value="Submit">
 					</form>
 				</div>
-				<div>
-					<a href='/offer'><button id="offerRide">Offer a Ride</button></a>
-				</div>
-				<div>
-					<a href='/need'><button id="needRide">Need a Ride</button></a>	
+					<a href='/offer'><h3 id="offerRide">Offer a Ride</h3></a>
+					<a href='/need'><h3 id="needRide">Need a Ride</h3></a>	
 				</div>
 				<div id="rideRequest">
 					<h3 id="activeRequest">Active Ride Requests:</h3>
