--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -28,8 +28,8 @@
 						<input type='submit' value="Submit">
 					</form>
 				</div>
-					<a href='/offer'><h3 id="offerRide">Offer a Ride</h3></a>
-					<a href='/need'><h3 id="needRide">Need a Ride</h3></a>	
+					<a href='/offer'><button id="offerRide">Offer a Ride</button></a>
+					<a id='linkneed' href='/need'><button id="needRide">Need a Ride</button></a>
 				</div>
 				<div id="rideRequest">
 					<h3 id="activeRequest">Active Ride Requests:</h3>
