--- a/app/views/offerRide.html
+++ b/app/views/offerRide.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		    <title>Post a Ride</title>
-		    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+		    <link rel="stylesheet" type="text/css" href="static/css/offerRide.css">
 		    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
