--- a/app/views/rideInfo.html
+++ b/app/views/rideInfo.html
@@ -39,6 +39,9 @@
 						<img src="img/seat.jpg">
 						<img src="img/seat.jpg">
 					</div>
+					<form action="" method="">
+						<button id="request" type="submit" value="Request Ride!">Request Ride!</button>
+					</form>
 				</div>	
 			</div>
 	</div>		
