--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -40,6 +40,7 @@ h1> span{
 	font-size: xx-large;
 	color: #59D0DB;
 }
+
 #about{
 	margin: -150px 0px 0px 353px;
 	position: absolute;
@@ -47,64 +48,42 @@ h1> span{
 
 #sentence{
 	position: absolute;
-	margin: 180px 478px 0px 50px;
+	margin: -120px 200px 0px 352px;
+}
+#activeRequest{
+	color: black;
+	margin: 50px 0px 0px 50px;
+}
+#linkneed{
+	margin: 0;
 	display: inline-block;
+	width: 20px;
 }
-p#sentence{
-	display: inline-block;
-}
-#tripDetails{
-	border: 1px solid black;
-	height: 480px;
-	width:390px;
-	font-size: 14px;
-	margin: -147px 0px 0px 822px;
-	position: absolute;
-}
-#tripHeader{
-	background-color: #59D0DB;
-}
-#tripHeader h1{
-	color: white;
-}
-#details{
-	padding: 0px 16px;
-}
-#intinerary{
-	padding: 0px 16px;
-
-}
-#intinerary h4{
-	display: inline-block;
-
-}
-#seatsAvail{
-	margin-left: 70px;
-	display: inline-block;
-}
-#info{
-	padding-left: 16px;
-	display: inline-block;
-}
-h4{
-	display: inline-block;
-	padding-left: 16px;
-}
-#numberSeats{
-	padding-left: 100px;
-}
-img{
-	height: 40px;
-}
-#request{
-	height: 72px;
-	width: 390px;
-	color: white;
-	background-color: #FF9933;
+#offerRide{
+	margin: 50px 0px 0px 300px;
+	height: 60px;
+	width: 300px;
 	font-size: xx-large;
-	margin-top: 30px;
-
+	background-color: #FF9933;
+	color: white;
 }
-/*p{
-	display:inline-block;*/
+#needRide{
+	margin: -60px 0px 0px 70px;
+	height: 60px;
+	width: 300px;
+	font-size: xx-large;
+	background-color: #59D0DB;
+	color: white;
+}
+.requestRide{
+	margin-left: 0px;
+}
+li{
+	display: inline-block;
+}
+#pendingRequests ul li{
+	display: inline-block;
+}
+ul{
+	display: inline-block;
 }
