--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -127,6 +127,11 @@ p{
 	color: black;
 	margin: 50px 0px 0px 50px;
 }
+ul {
+	display: inline-block;
+	margin: 82px -12px 0px -280px;
+	position: absolute;
+}
 
 #about{
 	margin: 120px 0px 0px 53px;
