--- a/app/views/userProfile.html
+++ b/app/views/userProfile.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-    	<title>Ride Share Profile</title>
+    	<title>Ride Share User Profile</title>
     	<link rel="stylesheet" type="text/css" href="static/css/userProfile.css">
     	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -23,6 +23,19 @@
 					<p id="about">About</p>
 					<p id="sentence">Amazing driver. I have the need for speed.</p>
 				</div>	
+				<div id="pastTripDetails">
+					<div id="previousTripHeader">
+						<h1>Previous Trips</h1>
+					</div>
+					<div id="intinerary">
+						<h2>Intinerary</h2>
+						<h4>Valenica --> Santa Monica</h4>
+						<h4>Santa Monica --> Valencia</h4>
+						<h4>Palmdale --> Hollywood</h4>
+						<h4>Lancaster --> Hollywood</h4>
+						<img src="img/carpool.png" alt="">
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
