--- a/app/views/rideInfo.html
+++ b/app/views/rideInfo.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 			<div id="header">
-        		<h1>RIDE <span>SHARE</span></h1>
+        		<a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
         		<button id="logout">Log Out</button>
       		</div>
       		<div id="page">
