--- a/app/views/userProfile.html
+++ b/app/views/userProfile.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container">
 			<div id="header">
-        		<h1>RIDE <span>SHARE</span></h1>
+        		<a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
         		<button id="logout">Log Out</button>
       		</div>
       		<div id="page">
