--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -1,53 +1,231 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-	    <title>Need a Ride</title>
-	    <link rel="stylesheet" type="text/css" href="static/css/needRide.css">
-	    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-    	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBg-UDbAAvfA7W6bysXmpCecbCQ0VUvXSM&amp;libraries=places" type="text/javascript"></script>
-    	<script type="text/javascript">
-    	$(document).ready(function() {
-				$("#carpool").animate({right: "+=550"}, 2000);
-				
-			$(document).ready(function() {
-   				$("#datepicker").datepicker();
-  			})
-		});
-   	function initialize() {
-      var input = document.getElementById('searchTextField');
-      var options = {
-         types: ['geocode']
+  <head>
+    <title>Need a Ride</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#carpool").animate({right: "+=550"}, 2000);
+        
+      $(document).ready(function() {
+          $("#datepicker").datepicker();
+        })
+    });
+    </script>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+    </style>
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <style>
+      #locationField, #controls {
+        position: relative;
+        width: 480px;
+      }
+      #autocomplete {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 99%;
+      }
+      .label {
+        text-align: right;
+        font-weight: bold;
+        width: 100px;
+        color: #303030;
+      }
+      #address {
+        border: 1px solid #000090;
+        background-color: #f0f0ff;
+        width: 480px;
+        padding-right: 2px;
+      }
+      #address td {
+        font-size: 10pt;
+      }
+      .field {
+        width: 99%;
+      }
+      .slimField {
+        width: 80px;
+      }
+      .wideField {
+        width: 200px;
+      }
+      #locationField {
+        height: 20px;
+        margin-bottom: 2px;
+      }
+    </style>
+  </head>
+
+  <body>
+
+
+    <div class="container">
+      <div id="header">
+          <a href='/main'><h1>RIDE <span>SHARE</span></h1></a>
+          <button id="logout">Log Out</button>
+        </div>
+        <div id="search">
+        	<p>Enter your work address below:</p>
+        	<form action='/search' method="POST">
+             <div id="locationField">
+              <input id="autocomplete" placeholder="Where from?"
+             onFocus="geolocate()" type="text"></input>
+              </div>
+
+              <table id="address">
+      <tr>
+        <td class="label">Street address</td>
+        <td class="slimField"><input class="field" id="street_number"
+              disabled="true"></input></td>
+        <td class="wideField" colspan="2"><input class="field" id="route"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">City</td>
+        <td class="wideField" colspan="3"><input class="field" id="locality"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">State</td>
+        <td class="slimField"><input class="field"
+              id="administrative_area_level_1" disabled="true"></input></td>
+        <td class="label">Zip code</td>
+        <td class="wideField"><input class="field" id="postal_code"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">Country</td>
+        <td class="wideField" colspan="3"><input class="field"
+              id="country" disabled="true"></input></td>
+      </tr>
+    </table>
+
+              <div id="locationField">
+              <input id="autocomplete" placeholder="Where to?"
+             onFocus="geolocate()" type="text"></input>
+              </div>
+              
+              <table id="address">
+      <tr>
+        <td class="label">Street address</td>
+        <td class="slimField"><input class="field" id="street_number"
+              disabled="true"></input></td>
+        <td class="wideField" colspan="2"><input class="field" id="route"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">City</td>
+        <td class="wideField" colspan="3"><input class="field" id="locality"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">State</td>
+        <td class="slimField"><input class="field"
+              id="administrative_area_level_1" disabled="true"></input></td>
+        <td class="label">Zip code</td>
+        <td class="wideField"><input class="field" id="postal_code"
+              disabled="true"></input></td>
+      </tr>
+      <tr>
+        <td class="label">Country</td>
+        <td class="wideField" colspan="3"><input class="field"
+              id="country" disabled="true"></input></td>
+      </tr>
+    </table>
+
+          <p class="datepicker"><input type="text" id="datepicker" placeholder="Date"></p>        
+          <input id="searchButton" type="submit" value="submit">  
+          </form>
+        </div>
+        <div>
+          <img id="carpool" src="static/img/carpool.png" alt="">
+        </div>
+        <div>
+        {% for result in resultArray %}
+          {{ result['origin'] }} to {{ result['destination'] }} on {{ result['date'] }} at {{ result['time'] }}
+        {% endfor %}
+        </div>
+    </div>
+    <script>
+      // This example displays an address form, using the autocomplete feature
+      // of the Google Places API to help users fill in the information.
+
+      // This example requires the Places library. Include the libraries=places
+      // parameter when you first load the API. For example:
+      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
+
+      var placeSearch, autocomplete;
+      var componentForm = {
+        street_number: 'short_name',
+        route: 'long_name',
+        locality: 'long_name',
+        administrative_area_level_1: 'short_name',
+        country: 'long_name',
+        postal_code: 'short_name'
       };
-      var autocomplete = new google.maps.places.Autocomplete(input,options);
-   }
-   google.maps.event.addDomListener(window, 'load', initialize);
-		</script>
-	</head>
-	<body>
-		<div class="container">
-			<div id="header">
-		    	<h1>RIDE <span>SHARE</span></h1>
-		    	<button id="logout">Log Out</button>
-		  	</div>
-		  	<div id="search">
-		  		<form action='/search' method='post' id="toFrom">
-					From<br><br><input name='origin' id="searchTextField" type="text" placeholder="Where from?"/><br><br> 
-					Destination<br><br><input name='destination' id="searchTextField" type="text" placeholder="Where to?"/><br><br>
-					<p class="datepicker"><input type="text" id="datepicker" placeholder="Date"></p>  	   	
-					<input id="searchButton" type="submit" value="submit">	
-		  		</form>
-		  	</div>
-		  	<div>
-		  		<img id="carpool" src="static/img/carpool.png" alt="">
-		  	</div>
-		  	<div>
-		  	{% for result in resultArray %}
-		  		{{ result['origin'] }} to {{ result['destination'] }} on {{ result['date'] }} at {{ result['time'] }}
-		  	{% endfor %}
-		  	</div>
-		</div>
-	</body>
+
+      function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+        autocomplete = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
+            {types: ['geocode']});
+
+        // When the user selects an address from the dropdown, populate the address
+        // fields in the form.
+        autocomplete.addListener('place_changed', fillInAddress);
+      }
+
+      function fillInAddress() {
+        // Get the place details from the autocomplete object.
+        var place = autocomplete.getPlace();
+
+        for (var component in componentForm) {
+          document.getElementById(component).value = '';
+          document.getElementById(component).disabled = false;
+        }
+
+        // Get each component of the address from the place details
+        // and fill the corresponding field on the form.
+        for (var i = 0; i < place.address_components.length; i++) {
+          var addressType = place.address_components[i].types[0];
+          if (componentForm[addressType]) {
+            var val = place.address_components[i][componentForm[addressType]];
+            document.getElementById(addressType).value = val;
+          }
+        }
+      }
+
+      // Bias the autocomplete object to the user's geographical location,
+      // as supplied by the browser's 'navigator.geolocation' object.
+      function geolocate() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var geolocation = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            var circle = new google.maps.Circle({
+              center: geolocation,
+              radius: position.coords.accuracy
+            });
+            autocomplete.setBounds(circle.getBounds());
+          });
+        }
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg-UDbAAvfA7W6bysXmpCecbCQ0VUvXSM&amp;libraries=places&amp;callback=initAutocomplete"
+        async defer></script>
+
+  </body>
 </html>
