--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -24,6 +24,7 @@
       }
     </style>
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" type="text/css" href="static/css/needRide.css">
     <style>
       #locationField, #controls {
         position: relative;
