delete offer working

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -65,12 +65,12 @@
 				<h3 class=requestRide id="activeRequest">Active Ride Offers:</h3>
 				<div id="flex">
 				{% for offer in offerArray %}
-					<li>{{ offer['origin'] }} &nbsp; to &nbsp; {{ offer['destination'] }} &nbsp; on &nbsp; {{ offer['date'] }} &nbsp; at &nbsp; {{ offer['time'] }}
+					<li>{{ offer['origin'] }} &nbsp; to &nbsp; {{ offer['destination'] }} &nbsp; on &nbsp; {{ offer['date'] }} &nbsp; at &nbsp; {{ offer['time'] }} &nbsp; {{offer['id']}}
 					<form action='/delete_offer' method='post'>
-						<input type='hidden' name='offer_id' value="offer['id']">
+						<input type='hidden' name='offer_id' value="{{ offer['id'] }}">
 						<button type='submit'>Delete</button>
 					</form>
-						<form action='/load_offer' method='post'>
+					<form action='/load_offer' method='post'>
 						<input type='hidden' name='offer_id' value="offer['id']">
 						<button type='submit'>View</button></li>
 					</form>
