added name to input fields on needride

--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -101,7 +101,7 @@
         <td class="slimField"><input class="field"
               id="administrative_area_level_1" disabled="true"></input></td>
         <td class="label">Zip code</td>
-        <td class="wideField"><input class="field" id="postal_code"
+        <td class="wideField"><input class="field" name='postalCodeOrigin' id="postal_code"
               disabled="true"></input></td>
       </tr>
       <tr>
@@ -134,7 +134,7 @@
         <td class="slimField"><input class="field"
               id="administrative_area_level_1" disabled="true"></input></td>
         <td class="label">Zip code</td>
-        <td class="wideField"><input class="field" id="postal_code"
+        <td class="wideField"><input class="field" name='postalCodeDestination' id="postal_code"
               disabled="true"></input></td>
       </tr>
       <tr>
