--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -4,7 +4,10 @@
     <title>Need a Ride</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <script type="text/javascript">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+      <script type="text/javascript">
       $(document).ready(function() {
         $("#carpool").animate({right: "+=550"}, 2000);
         
@@ -28,23 +31,32 @@
     <style>
       #locationField, #controls {
         position: relative;
-        width: 480px;
+        width: 250px;
+        height: 44px;
+        height: 44px
+        font-size: larger;
+      }
+      #locationField{
+        height: 44px
+        font-size: larger;
       }
       #autocomplete {
         position: absolute;
         top: 0px;
         left: 0px;
-        width: 99%;
+        width: 350px;
+        height: 44px;
+        font-size: large;
       }
       .label {
         text-align: right;
         font-weight: bold;
-        width: 100px;
-        color: #303030;
+        width: 20px;
+        /*color: #303030;*/
       }
       #address {
-        border: 1px solid #000090;
-        background-color: #f0f0ff;
+        /*border: 1px solid #000090;*/
+        /*background-color: #f0f0ff;*/
         width: 480px;
         padding-right: 2px;
       }
@@ -58,11 +70,24 @@
         width: 80px;
       }
       .wideField {
-        width: 200px;
+        width: 150px;
+        height: 30px;
+        margin: 30px;
       }
       #locationField {
         height: 20px;
         margin-bottom: 2px;
+      }
+      #postal_code{
+        width: 213px;
+        height: 35px;
+        margin: 34px 0px 10px 0px;
+      }
+      #search{
+        width: 368px;
+      }
+      #searchButton{
+        margin-left: 257px;
       }
     </style>
   </head>
@@ -84,7 +109,7 @@
               </div>
 
               <table id="address">
-      <tr>
+      <!-- <tr>
         <td class="label">Street address</td>
         <td class="slimField"><input class="field" id="street_number"
               disabled="true"></input></td>
@@ -95,20 +120,20 @@
         <td class="label">City</td>
         <td class="wideField" colspan="3"><input class="field" id="locality"
               disabled="true"></input></td>
-      </tr>
+      </tr> -->
       <tr>
-        <td class="label">State</td>
+        <!-- <td class="label">State</td>
         <td class="slimField"><input class="field"
-              id="administrative_area_level_1" disabled="true"></input></td>
+              id="administrative_area_level_1" disabled="true"></input></td> -->
         <td class="label">Zip code</td>
         <td class="wideField"><input class="field" name='postalCodeOrigin' id="postal_code"
               disabled="true"></input></td>
       </tr>
-      <tr>
+     <!--  <tr>
         <td class="label">Country</td>
         <td class="wideField" colspan="3"><input class="field"
               id="country" disabled="true"></input></td>
-      </tr>
+      </tr> -->
     </table>
 
               <div id="locationField">
@@ -117,7 +142,7 @@
               </div>
               
               <table id="address">
-      <tr>
+      <!-- <tr>
         <td class="label">Street address</td>
         <td class="slimField"><input class="field" id="street_number"
               disabled="true"></input></td>
@@ -128,20 +153,20 @@
         <td class="label">City</td>
         <td class="wideField" colspan="3"><input class="field" id="locality"
               disabled="true"></input></td>
-      </tr>
+      </tr> -->
       <tr>
-        <td class="label">State</td>
+        <!-- <td class="label">State</td>
         <td class="slimField"><input class="field"
-              id="administrative_area_level_1" disabled="true"></input></td>
+              id="administrative_area_level_1" disabled="true"></input></td> -->
         <td class="label">Zip code</td>
         <td class="wideField"><input class="field" name='postalCodeDestination' id="postal_code"
               disabled="true"></input></td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td class="label">Country</td>
         <td class="wideField" colspan="3"><input class="field"
               id="country" disabled="true"></input></td>
-      </tr>
+      </tr> -->
     </table>
 
           <p class="datepicker"><input type="text" id="datepicker" placeholder="Date"></p>        
