--- a/app/views/offerRide.html
+++ b/app/views/offerRide.html
@@ -36,6 +36,11 @@
         // When the user selects an address from the dropdown, populate the address
         // fields in the form.
         autocomplete.addListener('place_changed', fillInAddress);
+
+        autocomplete2 = new google.maps.places.Autocomplete(document.getElementById('autocomplete2'), { types: [ 'geocode' ] });
+        google.maps.event.addListener(autocomplete2, 'place_changed', function() {
+          fillInAddress();
+        });
       }
 
       function fillInAddress() {
@@ -75,7 +80,7 @@
           });
         }
       }
-    </script>	
+    </script>
 		</head>
 	<body>
 	<div id="container">
@@ -95,7 +100,7 @@
               </div>
 
               <table id="address">
-      <tr>
+      <!-- <tr>
         <td class="label">Street address</td>
         <td class="slimField"><input class="field" id="street_number"
               disabled="true"></input></td>
@@ -110,25 +115,25 @@
       <tr>
         <td class="label">State</td>
         <td class="slimField"><input class="field"
-              id="administrative_area_level_1" disabled="true"></input></td>
+              id="administrative_area_level_1" disabled="true"></input></td> -->
         <td class="label">Zip code</td>
         <td class="wideField"><input class="field" id="postal_code"
               disabled="true"></input></td>
       </tr>
-      <tr>
+<!--       <tr>
         <td class="label">Country</td>
         <td class="wideField" colspan="3"><input class="field"
               id="country" disabled="true"></input></td>
-      </tr>
+      </tr> -->
     </table>
 
               <div id="locationField">
-              <input id="autocomplete" name='destination' placeholder="Where to?"
+              <input id="autocomplete2" name='destination' placeholder="Where to?"
              onFocus="geolocate()" type="text"></input>
               </div>
 
 <table id="address">
-      <tr>
+      <!-- <tr>
         <td class="label">Street address</td>
         <td class="slimField"><input class="field" id="street_number"
               disabled="true"></input></td>
@@ -143,22 +148,25 @@
       <tr>
         <td class="label">State</td>
         <td class="slimField"><input class="field"
-              id="administrative_area_level_1" disabled="true"></input></td>
+              id="administrative_area_level_1" disabled="true"></input></td> -->
         <td class="label">Zip code</td>
         <td class="wideField"><input class="field" id="postal_code"
               disabled="true"></input></td>
       </tr>
-      <tr>
+<!--       <tr>
         <td class="label">Country</td>
         <td class="wideField" colspan="3"><input class="field"
               id="country" disabled="true"></input></td>
-      </tr>
+      </tr> -->
     </table>
 
 				
 				<p class="depart"> Depart</p>
 					<p class="datepicker"><input name='date' type="text" id="datepicker" placeholder="Date"></p>
-					<input type='time' name='time' id="time" placeholder="Time">
+					<input type='time' name='departure_time' id="time" placeholder="Time">
+          <p class="depart"> Arrival</p>
+          <p class="datepicker"><input name='date' type="text" id="datepicker" placeholder="Date"></p>
+          <input type='time' name='arrival_time' id="time" placeholder="Time">
 				<span id="numberSeats">Number of seats<br></span>
 					<input type='number' name='seats' id="seats">
 				<span id="pricePerSeat">Price per seat</span>
