--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -176,7 +176,7 @@
         <div>
           <img id="carpool" src="static/img/carpool.png" alt="">
         </div>
-        <div>
+        <div id="results_box">
         {% for result in resultArray %}
         	<div id="resultBox">
 		      		<div id="resultHeader">
@@ -190,15 +190,14 @@
 						<h4>DEPARTING</h4>
 						<p id="info">{{ result['date'] }}<br>{{ result['departure_time'] }}</p>
 						<h4>ARRIVING</h4>
-						<p id="info">{{ result['arrivale_time' }}</p>
+						<p id="info">{{ result['arrival_time' }}</p>
 						<h4 id="seatsAvail">SEATS AVAIL.</h4>
 						<span id="numberSeats">{{ result['seats_available'] }}</span>
-						{% for i in range(1, {{ result['seats_available'] }} )}
+						{% for i in range(1, {{ result['seats_available'] }} + 1) %}
 						<img src="staticimg/seat.jpg">
 						{% endfor %}
 					</div>
 				</div>
-          {{ result['origin'] }} to {{ result['destination'] }} on {{ result['date'] }} at {{ result['time'] }}
         {% endfor %}
         </div>
     </div>
