--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -177,7 +177,7 @@
           <img id="carpool" src="static/img/carpool.png" alt="">
         </div>
         <div id="results_box">
-        {% for result in resultArray %}
+        <!-- {% for result in resultArray %}
         	<div id="resultBox">
 		      		<div id="resultHeader">
 						<h2>Intinerary</h2>
@@ -199,7 +199,7 @@
 					</div>
 				</div>
         {% endfor %}
-        </div>
+        </div> -->
     </div>
     <script>
       // This example displays an address form, using the autocomplete feature
