--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -48,6 +48,15 @@
         height: 44px;
         font-size: large;
       }
+      #autocomplete2 {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 350px;
+        height: 44px;
+        font-size: large;
+        margin-top: 40px;
+      }
       .label {
         text-align: right;
         font-weight: bold;
