--- a/app/static/css/offerRide.css
+++ b/app/static/css/offerRide.css
@@ -42,7 +42,7 @@ h1> span{
 	margin: 40px 0px 0px 0px;
 	color: black;
 }
-#searchTextField{
+#locationField{
 	margin-top: 30px;
 	height: 44px;
 	width: 469px;
@@ -102,4 +102,14 @@ textarea{
 	font-size: larger;
 	margin: 30px 0px 0px 0px;
 	color: white;
+}
+#autocomplete{
+	height: 44px;
+	width: 469px;
+	font-size: large;
+}
+#autocomplete2{
+	height: 44px;
+	width: 469px;
+	font-size: large;
 }
