switched "need ride" and "offer ride" buttons

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -28,8 +28,8 @@
 						<input id="submitAbout" type='submit' value="Submit">
 					</form>
 				</div>
-					<a href='/offer'><button id="offerRide">Offer a Ride</button></a>
 					<a id='linkneed' href='/need'><button id="needRide">Need a Ride</button></a>
+					<a id="linkoffer" href='/offer'><button id="offerRide">Offer a Ride</button></a>
 				</div>
 				<div id="rideRequest">
 					<ul id="pendingRequests">
