--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -148,7 +148,7 @@
 						<h4 id="seatsAvail">SEATS AVAIL.</h4>
 						<span id="numberSeats">{{ result['seats_available'] }}</span>
 						{% for i in range (1, result['seats_available'] + 1) %}
-						<img src="staticimg/seat.jpg">
+						<img src="static/img/seat.jpg">
 
 						{% endfor %}
 					</div>
