--- a/app/static/css/needRide.css
+++ b/app/static/css/needRide.css
@@ -75,3 +75,47 @@ h1> span{
 .datepicker{
 	margin-top: 90px
 }
+#results h1{
+	margin-left: 500px;
+	color: black;
+}
+#resultBox{
+	border: 1px solid black;
+	height: 200px;
+	width:800px;
+	font-size: 14px;
+	margin: 0px 200px 0px 200px	
+}
+#resultHeader{
+	border-bottom: 1px black solid;
+	background-color: #59D0DB;
+}
+h2{
+	background-color: #59D0DB;
+	color: white;
+	margin-top: 0px;
+	padding: 16px 0px 0px 16px ;
+}
+h3{
+	padding-left: 16px;
+	margin-bottom: 10px;
+}
+#seatsAvail{
+	margin-left: 70px;
+	display: inline-block;
+}
+#info{
+	padding-left: 16px;
+	display: inline-block;
+}
+h4{
+	display: inline-block;
+	padding-left: 16px;
+}
+#numberSeats{
+	padding-left: 25px;
+}
+img{
+	height: 30px;
+	padding: 0px 0px 0px 10px;
+}
