--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -135,6 +135,9 @@
         	<div id="resultBox">
 		      		<div id="resultHeader">
 						<h2>Intinerary</h2>
+            <form action="" method="">
+              <button id="viewUserProfile">View User Profile</button>
+            </form>
 					</div>
 					<div id="route">
 						<h3>From:{{ result['origin'] }}</h3>
