--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -135,8 +135,9 @@
         	<div id="resultBox">
 		      		<div id="resultHeader">
 						<h2>Intinerary</h2>
-            <form action="" method="">
-              <button id="viewUserProfile">View User Profile</button>
+            <form action="/interest" method="post">
+             <input type='hidden' value="result['id']">
+              <button id="viewUserProfile">Join Ride</button>
             </form>
 					</div>
 					<div id="route">
