--- a/app/views/needRide.html
+++ b/app/views/needRide.html
@@ -136,7 +136,7 @@
 		      		<div id="resultHeader">
 						<h2>Intinerary</h2>
             <form action="/interest" method="post">
-             <input type='hidden' value="result['id']">
+             <input type='hidden' value="{{result['id']}}" name='interest'>
               <button id="viewUserProfile">Join Ride</button>
             </form>
 					</div>
